--- a/.github/workflows/ga-deploy.yml
+++ b/.github/workflows/ga-deploy.yml
@@ -1,10 +1,8 @@
-# Flujo de trabajo simple para implementar contenido estático en Github Pages
 name: Implementar contenido estático a Pages
 
 on:
-  # Se ejecuta en anotaciones dirigidas a la rama predeterminada
   push:
-    branches: ['main']
+    branches: ["main"]
 
   # Te permite ejecutar este flujo de trabajo manualmente desde la pestaña Acciones
   workflow_dispatch:
@@ -17,7 +15,7 @@ permissions:
 
 # Permite una implementación simultánea
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: true
 
 jobs:
@@ -34,7 +32,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
       - name: Install dependencies
         run: npm ci
       - name: Build
@@ -44,8 +42,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
-          path: './dist'
+          path: "./dist"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
